# cryptoutil

./: $covFile  $coverageFile  $outFile  $outPath  .air.toml  .cicd-circular-dep-cache.json  .cspell.json  .cspellcache  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gofumpt.toml  .golangci.yml  .golangci.yml.backup  .gremlins.yaml  .gremlins.yml  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlint.jsonc  .nuclei-ignore  .pre-commit-config.yaml  .rgignore  .sqlfluff  .yamlfmt  .yamllint.yaml  ARCHITECTURE-v2.md  CLAUDE.md  DOCKER-COMPOSE-STRATEGY.doc  Dockerfile  NOTICE  README.md  TERMS.md  WORKFLOWS.md  apis_cov.out  barrier.cov  check_all_coverage.py  check_coverage.py  check_coverage2.py  (+114 more)
.cicd/: circular-dep-cache.json  dep-cache.json
.claude/: settings.local.json
.claude/agents/: beast-mode.md  fix-workflows.md  implementation-execution.md  implementation-planning.md
.claude/commands/: agent-scaffold.md  contract-test-gen.md  coverage-analysis.md  fips-audit.md  fitness-function-gen.md  instruction-scaffold.md  migration-create.md  new-service.md  openapi-codegen.md  propagation-check.md  skill-scaffold.md  sync-copilot-claude.md  test-benchmark-gen.md  test-fuzz-gen.md  test-table-driven.md
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml  versions-rules.xml  workflows-action-version-exceptions.json  workflows-outdated-action-exemptions.json
.github/agents/: autonomous-execution.agent.md  beast-mode-3.1.agent.md  beast-mode-custom.agent.md  beast-mode.agent.md  coverage-boost.agent.md  dependency-update.agent.md  doc-sync.agent.md  fix-github-workflows.agent.md  fix-tool-names.agent.md  fix-workflows.agent.md  implementation-execution.agent.md  implementation-planning.agent.md  plan-tasks-implement.agent.md  plan-tasks-quizme.agent.md  security-audit.agent.md  speckit.agent.md  workflow-fixing.agent.md
.github/instructions/: 01-01.architecture.instructions.md  (+133 more)
.github/instructions.backup.20251224-234906/: 01-03.speckit.instructions.md  02-01.architecture.instructions.md  02-02.service-template.instructions.md  02-04.versions.instructions.md  02-07.cryptography.instructions.md  02-08.hashes.instructions.md  02-09.pki.instructions.md  02-10.authn.instructions.md  03-02.testing.instructions.md  03-04.database.instructions.md  03-05.sqlite-gorm.instructions.md  03-06.security.instructions.md  03-07.linting.instructions.md  05-02.git.instructions.md  06-03.anti-patterns.instructions.md
.well-known/: tdm-reservation.txt
.zap/: dast-config.yml  rules.tsv
api/: generate.go  openapi-gen_config_client.yaml  openapi-gen_config_model.yaml  openapi-gen_config_server.yaml  openapi_spec_components.yaml  openapi_spec_paths.yaml
asn1/: asn1_test.go  ec_pkcs8_encode_decode_test.go
codec/: keypair.go
config/: postgresql-local-debug.yaml  postgresql.yaml  sqlite.yaml
configs/: configs-all-files.json  configs_all_files.json
container/: postgres.go  util.go
dast-reports/: dast-summary.md  openapi.json
database/: connection.go  connection_test.go
deployments/: Dockerfile  compose.integration.yml  deployments-all-files.json  deployments_all_files.json
docker/: Dockerfile  compose.yml  docker-compose.yml
docs/: API-ARCHITECTURE.md  APPLICATION-LISTENER-IMPLEMENTATION-SUMMARY.md  ARCHITECTURE-AGENT-LOOKUP.md  ARCHITECTURE-COMPOSE-MULTIDEPLOY.md  ARCHITECTURE-INDEX.md  ARCHITECTURE-SUGGESTIONS.md  ARCHITECTURE-TODO.md  ARCHITECTURE-v2-VERIFICATION-REPORT.md  ARCHITECTURE-v2.md  ARCHITECTURE.md  ARCHIVE-CONSOLIDATION-SUMMARY.md  ARCHIVE-EXTRACTION-SUMMARY.md  ARCHIVE-LIST.md  ARCHIVE-REVIEW-TASKS.md  ARCHIVED-SPEC-001-DELETION-RECOMMENDATION.md  AUTH-REFACTORING-PLAN.md  CGO-BAN-ENFORCEMENT.md  CMD-PATTERN.md  COMPREHENSIVE-VERIFICATION-SUMMARY.md  CONFIG-SCHEMA.md  CONFIGURATION.md  COPILOT-MULTI-PROJECT.md  COPILOT-SUGGESTIONS.md  DEAD_CODE_REVIEW.md  DEEP-ANALYSIS.md  DEEP-ANALYSIS2.yml  DELETE-ME-LATER-CROSS-REF-SPECKIT-COPILOT-TEMPLATE.md  DELETE-ME-LATER-SLOW-TEST-PACKAGES.md  DELETION-ASSESSMENT.md  DEMO-GUIDE.md  DEPLOYMENT.md  DEV-SETUP.md  DOCKER-COMPOSE-STRATEGY.doc  DOCUMENTATION-META-ANALYSIS.md  DOCUMENTATION-OPTIMIZATION-2025-12-24.md  E2E-TESTING.md  ENG-HANDBOOK-NEW.md  ENG-HANDBOOK-PHASE2-IDEAS.md  ENG-HANDBOOK.md  ENHANCEMENTS-BEAST-MODE-AGENT-COMPLETED.md  (+150 more)
fileutil/: fileutil.go
keygen/: keygen.go  keypool.go  keypool_test.go  keypools.go
keypairgen/: keypairgen.go  keypairpool.go
orm/: containers.go  entities.go  orm_db_containers.go  orm_service.go  orm_tables.go  service.go
repository/: kek.go  repository.go
scripts/: .gitignore  README-run-act-dast.md  README.md  build.bat  build.ps1  check-deps.go  check.go  cicd-utils.go  cicd-utils_test.go  cicd_checks.go  cicd_checks_test.go  cicd_utils.go  cicd_utils_test.go  consolidate-archive.ps1  count_tokens.py  dast.ps1  dast.sh  errcheck_excludes.txt  fix-gopls.sh  generate-coverage-reports.ps1  lint.ps1  lint.sh  mock-identity-services.go  monitor-act-dast.ps1  mutation-test.ps1  mutation-test.sh  parse-timing.ps1  refactor-instructions-part1.ps1  remove-unused-words.ps1  reorganize-instructions.ps1  run-act-dast.ps1  run-and-monitor-dast.ps1  security-scan.ps1  security-scan.sh  setup-pre-commit.bat  setup-pre-commit.ps1  test-token-client-credentials.ps1  test-token-client-credentials.sh  verify-docker.ps1
scripts/autoapprove/: README.md  autoapprove.py  pyproject.toml
scripts/autoapprove/tests/: __init__.py  test_autoapprove.py
server/: server.go  server_test.go
service/: kek_key_material.go  key_material.go  mapper.go  service.go
telemetry/: common.go  composite_service.go  logs.go  metrics.go  service.go  service_test.go  textmappropagator.go  traces.go
test/: e2e_integration_test.go
test-output/: coverage_baseline_summary.txt  coverage_baseline_timing.txt
test-outputs/: FILES.txt
test-reports/: DEPLOYMENT-CONTENTS-CHECK.md  DEPLOYMENTS-CONTENTS-CHECK.md
thread/: chan2_test.go  chan_test.go  chan_util_test.go  mutex_test.go  thread_test.go
util/: iso8601_time_util.go  pointer.go
uuid/: uuid.go
(+9351 files in other folders)
