# https://pypi.org/project/setuptools/ - Latest: 80.9.0 (2025-01-11)
# https://pypi.org/project/wheel/ - Latest: 0.45.1 (2025-01-02)
[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80.9", "wheel>=0.45.1" ]

[project]
name = "autoapprove"
version = "1.0.0"
description = "Command wrapper for VS Code Copilot Chat auto-approve bypass with loopback-only network restriction"
readme = "README.md"
authors = [ { name = "Justin Cranford" } ]
# https://www.python.org/downloads/release/python-3140/ - Python 3.14 required (released Oct 7, 2025)
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
# Minimal dependencies - only stdlib is needed for core functionality
dependencies = []
optional-dependencies.dev = [
  # https://pypi.org/project/pytest/ - Latest: 9.0.1 (2025-01-12)
  "pytest>=9.0.1",
  # https://pypi.org/project/pytest-cov/ - Latest: 7.0.0 (2025-01-10)
  "pytest-cov>=7",
  # https://pypi.org/project/ruff/ - Latest: 0.15.1 (2025-12-31)
  "ruff>=0.15.1",
]
scripts.autoapprove = "autoapprove:main"

[tool.setuptools]
packages.find.include = [ "autoapprove" ]

[tool.ruff]
target-version = "py314"
line-length = 200
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [ "B", "C90", "E", "F", "I", "SIM", "UP", "W" ]
lint.ignore = [
  "B008",
  "E203",
]

[tool.pytest]
ini_options.minversion = "7.0"
ini_options.addopts = [
  "-ra",
  "--strict-markers",
  "--cov=autoapprove",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "." ]

[tool.coverage]
run.branch = true
run.omit = [
  "*/__pycache__/*",
  "*/test_*.py",
  "*/tests/*",
  "*/venv/*",
]
run.source = [ "autoapprove" ]
report.exclude_lines = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.precision = 2
